<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Babel</string>
    <string name="github_oauth_activity_label">GitHub</string>
    <string name="error_message">An error has occurred. Please try this again later.</string>
    <string name="checking_session_validity">Checking session validity.</string>
    <string name="session_expired">Session expired.</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="logging_out">Logging out.</string>
    <string name="tap_to_start">Tap to Start</string>
    <string name="hint">Hint</string>
    <string name="skip">Skip</string>
    <string name="error_while_loading_languages">Error while loading languages, application might not be usable.</string>
    <string name="error_while_loading_licenses">Error while loading licenses.</string>
    <string name="error_while_loading_html_placeholder">Error while loading HTML placeholder, application might not be usable.</string>
    <string name="success">Correct!</string>
    <string name="file">File</string>
    <string name="repository">Repository</string>
    <string name="failed">Incorrect!</string>
    <string name="language">Language</string>
    <string name="total_points">Total points</string>
    <string name="skipped">Skipped</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="share_this_app">Share this app</string>
    <string name="about_this_app">About this app</string>
    <string name="licenses_activity_label">Licenses</string>
    <string name="app_id">299901056473</string>
    <string name="hockeyapp_id">3e0cec23c4ee5f70899c8723fa21e5c8</string>
    <string name="about">About</string>
    <string name="achievements">Achievements</string>
</resources>
