<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/main_menu_action_settings"
        android:showAsAction="always"
        android:title="@string/settings"
        android:icon="@drawable/ic_action_action_settings">
        <menu>
            <item android:id="@+id/main_menu_action_leaderboards"
                android:title="@string/leaderboards" />
            <item android:id="@+id/main_menu_action_achievements"
                android:title="@string/achievements" />
            <item android:id="@+id/main_menu_action_share"
                android:title="@string/share_this_app" />
            <item android:id="@+id/main_menu_action_about"
                android:title="@string/about_this_app" />
        </menu>
    </item>
    <item android:id="@+id/main_menu_action_log_out"
        android:showAsAction="always"
        android:title="@string/log_out"/>
</menu>